# CPlusPlusExercises

./: .gitignore  CMakeLists.txt
Chatter/: .gitignore
Chatter/Client/: CMakeLists.txt
Chatter/Client/src/: Chatter.cpp
Chatter/Server/: CMakeLists.txt
Chatter/Server/src/: Chatter.cpp
Chatter/src/server/: Chatter.cpp
